--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Tabela
 spring.jpa.hibernate.ddl-auto=update
 
-
+#Erros
+server.error.include-stacktrace=never
+server.error.include-message=always
