Adicionado get categoria, usuario, funcao. Remocao id request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #bancodedados
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/vilayara
+spring.datasource.url=jdbc:postgresql://localhost:5433/vilayara
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=pgsql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #JPA
