FIX: criadas variáveis de ambiente para o POSTGRES e AWS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #bancodedados
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/vilayara
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORTA}/vilayara
+spring.datasource.username = ${POSTGRES_DB_USERNAME}
+spring.datasource.password=${POSTGRES_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #JPA
