--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 cloud:
   aws:
     credentials:
-      access-key:$AWSACCESSKEY
-      secret-key:$AWSSECRETKEY
+      access-key: ${AWS_ACCESSKEY}
+      secret-key: ${AWS_SECRETKEY}
     region:
       static: sa-east-1
     stack:
@@ -12,6 +12,5 @@ application:
   bucket:
     name: vilayaraimagens
 
-
 server:
-  port: 9090
+  port: 8080
