FIX: Configura variavel de ambiente POSTGRES_DB_NAME

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #bancodedados
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORTA}/vilayara
+spring.datasource.url=jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORTA}/${POSTGRES_DB_NAME}
 spring.datasource.username = ${POSTGRES_DB_USERNAME}
 spring.datasource.password=${POSTGRES_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
