Revert "FEAT: adicionados comentários"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-#Banco de dados
-#Nota: Criar as variáveis de ambiente no sistema operacional:
-#AWS_ACCESSKEY, AWS_SECRETKEY, 
-#POSTGRES_DB_HOST, POSTGRES_DB_NAME, POSTGRES_DB_PASSWORD, POSTGRES_DB_PORTA, POSTGRES_DB_USERNAME
+#bancodedados
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORTA}/${POSTGRES_DB_NAME}
 spring.datasource.username = ${POSTGRES_DB_USERNAME}
