--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,10 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.110</version>
 		</dependency>
-
+		<dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    </dependency>
 
 	</dependencies>
 
